tests/snapshots/compile__wgsl_convert_channelsplitter_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn channelsplitter1_r(uv: vec2f) -> f32 {
    let color = defaultUvMap(uv);
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    return color.r;
}

fn channelsplitter1_g(uv: vec2f) -> f32 {
    let color = defaultUvMap(uv);
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    return color.g;
}

fn channelsplitter1_b(uv: vec2f) -> f32 {
    let color = defaultUvMap(uv);
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    return color.b;
}

fn channelsplitter1_a(uv: vec2f) -> f32 {
    let color = defaultUvMap(uv);
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    return color.a;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(channelsplitter1_r(uv), channelsplitter1_g(uv), channelsplitter1_b(uv), channelsplitter1_a(uv));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba3_output(uv);
}
